--- a/src/main/resources/templates/common/layout_5block.html
+++ b/src/main/resources/templates/common/layout_5block.html
@@ -8,11 +8,16 @@
 <link rel="stylesheet" type="text/css" th:href="@{/css/stylesheet.css}" />
 <title th:replace="${title}">シェアードショップ</title>
 </head>
-<body class="admin">
+<body class="user">
 	<!--/* ヘッダー */-->
 	<header>
 		<div th:replace="~{common/header :: layout-header}"></div>
 	</header>
+	
+			<!--/* メニューバー */-->
+		<aside>
+			<div th:replace="~{common/menu :: layout-menu}"></div>
+		</aside>
 	<div class="container">
 		<!--/* サイドバー */-->
 		<aside>
