--- a/src/main/resources/templates/common/menu.html
+++ b/src/main/resources/templates/common/menu.html
@@ -9,6 +9,7 @@
 	*/--><li><a href="">新着一覧</a></li><!--/*
 	*/--><li><a href="">買い物かご</a></li><!--/*
 	*/--><th:block th:if="${session.user != null}"><li><a th:href="@{/order/list}">注文一覧</a></li></th:block><!--/*
+	*/--><th:block th:if="${session.user != null}"><li><a th:href="@{/love/list}">お気に入り</a></li></th:block><!--/*
 	*/--></ul>
 </body>
 </html>
